+ PaymentCategory (Init, Add, Edit) + Currency (get rates from the bank into DB)